[package]
name = "binpack"
version = "0.1.0"
authors = ["scullionw <williamscullion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binpack-macros = { path = "../binpack-macros" }
rust-embed = "5.1.0"
tempfile = "3.1.0"